# fastapi-todo

./: .env.dev  .gitignore  Dockerfile  README.md  initialize.py  main.py  pyproject.toml
backend/: initialize.py  locustfile.py  main.py
backend/core/: config.py
backend/models/: todo.py
backend/routers/: todo.py
backend/schemas/: todo.py  user.py
backend/services/: todo.py
backend/utility/: authentication.py  logger.py
core/: config.py
models/: group.py  user.py
routers/: health.py
schemas/: group.py
services/: group.py  user.py
utility/: authentication.py
